# Habit_tracker_3

./: .env.sample  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  urls.py
nginx/: Dockerfile  nginx.conf
tracker/: admin.py  models.py  pagination.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
tracker/migrations/: 0001_initial.py
users/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
